@@ -402,7 +402,7 @@ public class DataInputDeserializer implements DataInputView, java.io.Serializabl
     // ------------------------------------------------------------------------
 
     @SuppressWarnings("restriction")
-    private static final sun.misc.Unsafe UNSAFE = MemoryUtils.UNSAFE;
+    private static final jdk.internal.misc.Unsafe UNSAFE = MemoryUtils.UNSAFE;
 
     @SuppressWarnings("restriction")
     private static final long BASE_OFFSET = UNSAFE.arrayBaseOffset(byte[].class);
