@@ -363,7 +363,7 @@ public class DataOutputSerializer implements DataOutputView, MemorySegmentWritab
     // ------------------------------------------------------------------------
 
     @SuppressWarnings("restriction")
-    private static final sun.misc.Unsafe UNSAFE = MemoryUtils.UNSAFE;
+    private static final jdk.internal.misc.Unsafe UNSAFE = MemoryUtils.UNSAFE;
 
     @SuppressWarnings("restriction")
     private static final long BASE_OFFSET = UNSAFE.arrayBaseOffset(byte[].class);
